--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Knockout";
+  src: url("/font/knockout-font.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 @theme {
   --font-babas-neue: "Bebas Neue", sans-serif;
+  --font-open-sans: "Open Sans", sans-serif;
 }
